--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/wdfhai/manage_my_employees#readme",
   "dependencies": {
     "canvas": "^2.6.1",
+    "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "inquirer": "^8.0.0",
     "mysql2": "^2.2.5",
+    "node-emoji": "^1.10.0",
     "npm": "^7.6.0"
   }
 }
